Making small imrovements